--- a/XR-Interaction-Toolkit-Examples/.gitignore
+++ b/XR-Interaction-Toolkit-Examples/.gitignore
@@ -71,40 +71,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-############# BAKERY ASSETS ############
-# Ignore Bakery Assets folder
-/[Aa]ssets/Bakery/*
-
-# Never ignore these Bakery Asset files
-# Unignore specific files in ignored subdirectory https://stackoverflow.com/a/32504500/2129422
-!/[Aa]ssets/Bakery/ftLightmaps.cs
-!/[Aa]ssets/Bakery/ftLightmapsStorage.cs
-!/[Aa]ssets/Bakery/ftLocalStorage.cs
-!/[Aa]ssets/Bakery/ftGlobalStorage.cs
-!/[Aa]ssets/Bakery/BakeryProjectSettings.cs
-
-############# BAKERY EDITOR ############
-#Ignore Bakery Editor folder
-/[Aa]ssets/Editor/x64/Bakery/*
-
-#Unignore subdirectories only https://stackoverflow.com/a/18930104/2129422
-!/[Aa]ssets/Editor/x64/Bakery/*/
-!/[Aa]ssets/Bakery/ftLightmaps.cs.meta
-!/[Aa]ssets/Bakery/ftLightmapsStorage.cs.meta
-!/[Aa]ssets/Bakery/ftLocalStorage.cs.meta
-!/[Aa]ssets/Bakery/ftGlobalStorage.cs.meta
-!/[Aa]ssets/Bakery/BakeryProjectSettings.cs.meta
-
-#Re-ignore all *files* in subdirectories
-/[Aa]ssets/Editor/x64/Bakery/hwtestdata/*
-/[Aa]ssets/Editor/x64/Bakery/lightingDataChunks/*
-/[Aa]ssets/Editor/x64/Bakery/shaderSrc/*
-/[Aa]ssets/Editor/x64/Bakery/scripts/*
-
-# Never ignore these Bakery Editor files
-!/**/ftModelPostProcessor.cs
-!/**/ftSavedPadding2.cs
-!/**/ftRenderLightmap.cs
-!//ftModelPostProcessor.cs.meta
-!//ftSavedPadding2.cs.meta
-!//ftRenderLightmap.cs.meta
+//Bakery Lightmapper
+/[Aa]ssets/Bakery/
+/[Aa]ssets/Editor/x64/Bakery/
